--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   <link rel="stylesheet" href="./css/for_index.css">
 </head>
 <body>
+
+  <button class="btn-go">
+    <a href="./project/logIn.html">Lets go!</a>
+  </button>
+
 <!-- sidenav -->
-  <ul id="slide-out" class="sidenav sidenav-fixed">
+  <!-- <ul id="slide-out" class="sidenav sidenav-fixed">
     <li><div class="user-view">
       <div class="background">
         <img src="images/office.jpg">
@@ -25,7 +30,7 @@
     <li><a class="subheader">Subheader</a></li>
     <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
   </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
   <!-- sidenav -->
 
   <section>
